# control_board_set

./: control_board.brd  control_board.sch  resistance_measuring_board.sch  wheatstone_bridge_board.brd
electronics/: ._control_board.brd  ._tester_adapter_board.brd  control_board.brd  control_board.sch  resistance_measuring_board.brd  tester_adapter_board.brd  tester_adapter_board.sch  wheatstone_bridge_board.brd  wheatstone_bridge_board.sch
electronics/dual/: ._control_board.brd  control_board.brd  control_board.sch
experiment_data/: ._plot.py  plot.py
experiment_data/0324/: ._2_data_0324.txt  ._2_data_0324.xlsx  ._~$2_data_0324.xlsx  2_data_0324.txt  2_data_0324.xlsx
experiment_data/0326/: ._3_data_0326.txt  ._3_data_0326.xlsx  ._3_data_0326_hand.txt  ._3_data_0326_hand.xlsx  ._3_data_0326_hand_1.txt  ._3_data_0326_hand_1.xlsx  ._3_data_0326_hand_clear.xlsx  ._3_data_clear_0326.xlsx  (+8 more)
firmware/: README  ad5360.cpp  ad5360.h  ad7616.cpp  ad7616.h  embedded_gpio.h  embedded_spi.h  firmware.ino  pid_controller.cpp  pid_controller.h  teensy_gpio.cpp  teensy_gpio.h  teensy_spi.cpp  teensy_spi.h
firmware/raspi/control_board/: ._CMakeLists.txt  CMakeLists.txt
firmware/raspi/control_board/include/: ad5360.h  ad7616.h  ad7730.h  control_board.h  muscle.h  pid_controller.h  raspberry_pi_spi.h
firmware/raspi/control_board/src/: board_test.cpp  joint_rotation.cpp  muscle_adjust.cpp  muscle_test.cpp  reflex_test.cpp  static_tension_test.cpp
firmware/raspi/control_board/src/lib/: ad5360.cpp  ad7616.cpp  ad7730.cpp  control_board.cpp  muscle.cpp  raspberry_pi_spi.cpp
(+8 files in other folders)
